--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/sheryjs/dist/Shery.css">
-    <!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/sheryjs/dist/Shery.css" /> -->
+    <link rel="icon" href="https://cdni.iconscout.com/illustration/premium/thumb/mountain-7603812-6159764.png?f=webp">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -26,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ray-Ban</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -49,6 +48,5 @@
     
     <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
     
-    <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
   </body>
 </html>
