--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="https://cdni.iconscout.com/illustration/premium/thumb/mountain-7603812-6159764.png?f=webp" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -193,7 +193,7 @@ body {
   margin-bottom: 100px;
 }
     </style>
-    <title>React App</title>
+    <title>Ray-Ban</title>
   </head>
   <body>
     
